// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overwriteAutocomplete Tests should set appropriate autocomplete attribute on elements when disableAutocomplete feature is false 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "Sign in",
        },
        "type": "Title",
      },
      {
        "options": {
          "inputMeta": {
            "name": "identifier",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "options": {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`overwriteAutocomplete Tests should set appropriate autocomplete attribute on elements when disableAutocomplete feature is true 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "Sign in",
        },
        "type": "Title",
      },
      {
        "options": {
          "inputMeta": {
            "name": "identifier",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "attributes": {
            "autocomplete": "off",
          },
          "inputMeta": {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "options": {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`overwriteAutocomplete Tests should set appropriate autocomplete attribute on elements when disableAutocomplete feature is undefined 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "Sign in",
        },
        "type": "Title",
      },
      {
        "options": {
          "inputMeta": {
            "name": "identifier",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "options": {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`overwriteAutocomplete Tests should update all elements in array with appropriate autocomplete value when  disableAutocomplete feature is true 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "Sign in",
        },
        "type": "Title",
      },
      {
        "options": {
          "inputMeta": {
            "name": "identifier",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "attributes": {
            "autocomplete": "off",
          },
          "inputMeta": {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "options": {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
      {
        "options": {
          "attributes": {
            "autocomplete": "off",
          },
          "inputMeta": {
            "name": "confirmPassword",
          },
        },
        "type": "Field",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
